fixed scrollbars appearing on windows, and restrict window resizing to the content inside the window

--- a/style.css
+++ b/style.css
@@ -95,8 +95,9 @@ html {
     position: absolute;
     top: 100px;
     left: 100px;
-    min-height: 30px;
+    /* min-height: 30px; */
     min-width: 400px;
+    height: auto;
     background: #f0f0f0;
     border: 1px solid #0054e3;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
@@ -137,12 +138,12 @@ html {
 
 .window-body {
     flex: 1;
-    overflow: auto;
+    overflow-y: hidden;
     /* height: 100%; */
     /* align-self: stretch; */
     padding: 12px 16px;
     background: #f0f0f0;
-    min-height: 100px;
+    /* min-height: 100px; */
 }
 
 .window-buttons {
